# explorer-backend

./: .dockerignore  .env.example  .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
bins/explorer-api/: Cargo.toml
bins/explorer-api/src/: main.rs
bins/explorer-migrate/: Cargo.toml
bins/explorer-migrate/src/: main.rs
bins/explorer-parity/: Cargo.toml
bins/explorer-parity/src/: main.rs
bins/explorer-worker/: Cargo.toml
bins/explorer-worker/src/: main.rs
ci/: test-schema.sql  test-seed.sql
config/: example-api.toml  example-sync.toml
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/db/: Cargo.toml
crates/db/src/: events.rs  lib.rs  rpc_metadata.rs  staking.rs
crates/db/src/reads/: address_stats.rs  addresses.rs  blocks.rs  chains.rs  circulating_supply.rs  contract_method_histories.rs  contracts.rs  event_kinds.rs  events.rs  history_prices.rs  mod.rs  nfts.rs  oracles.rs  organizations.rs  overview_stats.rs  platforms.rs  rejected_transactions.rs  searches.rs  series.rs  sort.rs  staking_stats.rs  tokens.rs  transactions.rs  validator_kinds.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/http-api/: Cargo.toml
crates/http-api/src/: handlers.rs  lib.rs  rate_limit.rs  support.rs
crates/ingestion/: Cargo.toml
crates/ingestion/src/: driver.rs  lib.rs  prices.rs  ttrs.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
docker/api/: Dockerfile
docker/compose/: docker-compose.yml
docker/migrate/: Dockerfile
docker/worker/: Dockerfile
migrations/: 202605180001_rename_legacy_schema.sql  202605310001_add_events_burn_lookup_index.sql  202606010001_add_series_chain_api_response.sql  202606010002_add_token_carbon_id.sql  202606010003_add_transactions_state_timestamp_index.sql  202606010004_backfill_staking_stats_tail.sql  202606010005_backfill_token_daily_prices_from_legacy.sql  202606010006_create_staking_snapshot_projection_state.sql  202606130001_create_stake_boundary_slice.sql  202606150001_add_address_transactions_timestamp.sql  202606210001_backfill_legacy_gen1_fee_gas_decimals.sql
