[package]
name = "explorer-parity"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
explorer-db.workspace = true
explorer-domain.workspace = true
explorer-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
