[package]
name = "explorer-config"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
explorer-domain.workspace = true
serde.workspace = true
thiserror.workspace = true
toml.workspace = true
url.workspace = true

[lints]
workspace = true
