[package]
name = "explorer-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
explorer-domain.workspace = true
explorer-config.workspace = true
chrono.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
phantasma-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
