[package]
name = "explorer-http-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
explorer-config.workspace = true
explorer-db.workspace = true
explorer-domain.workspace = true
num-bigint.workspace = true
phantasma-sdk.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
utoipa-swagger-ui.workspace = true
uuid.workspace = true

[lints]
workspace = true
