[package]
name = "explorer-ingestion"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
chrono.workspace = true
explorer-config.workspace = true
explorer-db.workspace = true
explorer-domain.workspace = true
explorer-rpc.workspace = true
explorer-runtime.workspace = true
phantasma-sdk.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
